--- a/example/masonry/widget__masonry.styl
+++ b/example/masonry/widget__masonry.styl
@@ -6,6 +6,7 @@
         width: 33%;
         float: left;
         box-sizing: border-box;
+        appearance: normal;
         border: 1px dashed #ccc;
     }
 
