add stylus postCSS & clean compiled folder, update example

--- a/example/masonry/index.styl
+++ b/example/masonry/index.styl
@@ -6,8 +6,7 @@
         width: 33%;
         float: left;
         box-sizing: border-box;
-        appearance: normal;
-        border: 1px dashed #ccc;
+        border: 1px dashed $article__border;
     }
 
     @media screen and (min-width: 769px) and (max-width: 992px) {
